# soybean-admin-rust

./: Cargo.toml  README.md
axum-casbin/: Cargo.toml
axum-casbin/tests/: test_middleware.rs  test_middleware_domain.rs  test_set_enforcer.rs
docs/: PRODUCT_PLAN.md  PROGRESS.md  README.md  WEB3.md
examples/: alloy_complete.rs  alloy_example.rs  alloy_web3_service.rs  block_listener.rs  defi_examples.rs
migration/src/schemas/: m20260227_000001_create_web3_wallet.rs  m20260227_000002_create_web3_contract.rs  m20260227_000003_create_web3_transaction.rs  m20260302_000001_create_address_book.rs  mod.rs
sea-orm-adapter/src/: action.rs  adapter.rs
server/api/: Cargo.toml
server/api/src/admin/: sys_access_key_api.rs  sys_domain_api.rs  sys_role_api.rs  sys_user_api.rs
server/api/src/web3/: mod.rs
server/config/src/model/: database_config.rs  mongo_config.rs  redis_config.rs  s3_config.rs
server/core/src/sign/: mod.rs  (+1 more)
server/initialize/: Cargo.toml
server/initialize/src/: lib.rs  router_initialization.rs
server/model/src/: lib.rs
server/resources/: application.yaml
server/router/src/: lib.rs
server/service/: Cargo.toml
server/service/src/: lib.rs
server/service/src/admin/: sys_access_key_service.rs  sys_auth_service.rs  sys_authorization_service.rs  sys_domain_service.rs  sys_menu_service.rs  sys_role_service.rs  sys_user_service.rs
server/service/src/admin/errors/: sys_user_error.rs
server/service/src/web3/: alloy_provider.rs  alloy_provider_v2.rs  batch_transfer.rs  block_scanner.rs  bridge.rs  contract_call_impl.rs  defi_analytics.rs  defi_portfolio.rs  ens_service.rs  erc20.rs  gas_analytics.rs  indicators.rs  ipfs_service.rs  key_manager.rs  kline.rs  market_data.rs  mod.rs  nft.rs  oracle_price.rs  order.rs  pnl_tracker.rs  price_alert.rs  price_fetcher.rs  receipt_parser.rs  swap_service.rs  token_analytics.rs  token_vesting.rs  transaction_decoder.rs  transaction_failure_analyzer.rs  whale_tracker.rs  yield_optimizer.rs
server/service/src/web3/address_book/: error.rs  mod.rs  service.rs
server/service/tests/: web3_erc20.rs  web3_transaction_decoder.rs
server/utils/src/: tree_util.rs
(+19 files in other folders)
