[package]
name = "server-service"
authors.workspace = true
publish.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
server-constant = { path = "../constant" }
server-core = { path = "../core" }
server-global = { path = "../global" }
server-model = { path = "../model" }
server-utils = { path = "../utils" }

axum-casbin = { path = "../../axum-casbin" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
sea-orm = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, features = ["log"] }
redis = { workspace = true }
mongodb = { workspace = true }
anyhow = { workspace = true }
lazy_static = "1.4"
hex = "0.4"
serde_json = "1.0"
reqwest = { workspace = true }
lru = "0.12"
alloy.workspace = true
alloy-primitives.workspace = true
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"

[features]
default = ["debug-print"]
debug-print = ["sea-orm/debug-print"]
